@@ -2,6 +2,9 @@ Package: async
 ==============
 
 Version: 0.8.0-9000 [2016-04-14]
+o STANDARIZATION Now using option and environment names already defined
+  by the future package, i.e. future.maxTries, future.interval, and
+  R_FUTURE_MAXTRIES (used to be named async::* and R_ASYNC_*).
 o STANDARIZATION: Directories for BatchJobs are now created under
   .future/<session>/ of the current directory (was .async/<session>/).
   Also, those subdirectories now use prefix 'BatchJobs_' (was 'async').
